[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/timer/root.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/timer/label.gd" type="Script" id=3]
[ext_resource path="res://scripts/timer/startstop.gd" type="Script" id=4]
[ext_resource path="res://scripts/timer/base.gd" type="Script" id=5]
[ext_resource path="res://scripts/timer/set.gd" type="Script" id=6]
[ext_resource path="res://scripts/timer/timeSetter.gd" type="Script" id=7]
[ext_resource path="res://images/check.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]

size = 34
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Font/fallback", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 12
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 12
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=7]

font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=8]

size = 12
use_mipmaps = false
use_filter = false
font_data = SubResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=9]

size = 12
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Root" type="Node2D" index="0"]

position = Vector2( 517.938, 156.246 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -75.0
margin_right = 47.0
margin_bottom = -33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "1:19:5A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 3 )
_sections_unfolded = [ "Pause", "custom_fonts" ]

[node name="Data" type="Node" parent="." index="1"]

[node name="TimerName" type="LineEdit" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -65.0
margin_top = 27.0
margin_right = 77.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="MainButtons" type="Node2D" parent="." index="3"]

visible = false

[node name="StartStop" type="Button" parent="MainButtons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -64.0
margin_top = -2.0
margin_right = -9.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
script = ExtResource( 4 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Base" type="Button" parent="MainButtons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -4.0
margin_top = -2.0
margin_right = 30.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "12"
flat = false
align = 1
script = ExtResource( 5 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Set" type="Button" parent="MainButtons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_top = -2.0
margin_right = 76.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Set"
flat = false
align = 1
script = ExtResource( 6 )
_sections_unfolded = [ "custom_fonts" ]

[node name="SetButtons" type="Node2D" parent="." index="4"]

[node name="Denomination" type="Button" parent="SetButtons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -64.0
margin_right = -12.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "10min"
flat = false
align = 1
script = ExtResource( 7 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Add" type="Button" parent="SetButtons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_right = 32.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Reset" type="Button" parent="SetButtons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_right = 75.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "0"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Subtract" type="Button" parent="SetButtons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -10.0
margin_right = 9.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="CheckParent" type="Node2D" parent="SetButtons" index="4"]

scale = Vector2( 0.085, 0.085 )
_sections_unfolded = [ "Transform" ]

[node name="Check" type="TextureButton" parent="SetButtons/CheckParent" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 392.0
margin_top = -14.0
margin_right = 614.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]


